(executable
 (name hotcaml)
 (public_name hotcaml)
 (modules hotcaml)
 (modes byte)
 (flags :standard -linkall)
 (libraries unix threads.posix compiler-libs.toplevel findlib.top))

(executable
 (name hotcaml_lwt)
 (public_name hotcaml-lwt)
 (modules hotcaml_lwt)
 (modes byte)
 (flags :standard -linkall)
 (libraries unix threads.posix compiler-libs.toplevel findlib.top lwt lwt.unix))

(library
 (name hotlink)
 (public_name hotcaml.hotlink)
 (wrapped false)
 (modules hotlink))
